--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
   <h1>Imagens</h1>
   <img src="./src/images/personagens.png" alt="">
   <img src="./src/images/personagens2.png" alt="imagem dos personagens de GTA V">
-  <img src="https://placehold.co/600x400" alt="imagens de placeholder 600x400  ">
+  <img src="https://placehold.co/600x400" alt="imagens de placeholder 600x400 sem ocupar toda a scream  ">
 </body>
 </html>
